plugins {
    id 'org.springframework.boot' version '2.4.0-M4'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'org.asciidoctor.convert' version '1.5.8'
    id 'java'
}

group = 'me.udintsev.otus.architect'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
    set('testcontainersVersion', "1.14.3")
}

dependencies {
    implementation 'io.r2dbc:r2dbc-postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework:spring-r2dbc'
    implementation 'org.springframework.experimental:spring-graalvm-native:0.8.1'
    implementation 'org.hibernate.validator:hibernate-validator'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.assertj:assertj-core'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-webtestclient'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:r2dbc'
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
    }
}

test {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

asciidoctor {
    // See https://asciidoctor.github.io/asciidoctor-gradle-plugin/maintenance-1.5/
    inputs.dir snippetsDir
    dependsOn test
    sourceDir  file('src/main/asciidoc')
}

bootJar {
    // See https://docs.spring.io/spring-boot/docs/current/gradle-plugin/reference/html/
    dependsOn asciidoctor
    from ("${asciidoctor.outputDir}/html5") {
        into 'static/docs'
    }
//    from ("${asciidoctor.outputDir}/html5") {
//        into 'BOOT-INF/classes/static/docs'
//    }
//    from ("${asciidoctor.outputDir}/html5") {
//        into 'META-INF/resources/docs'
//    }
}

bootBuildImage {
    builder = "paketobuildpacks/builder:tiny"
    environment = [
            "BP_BOOT_NATIVE_IMAGE" : "1",
            "BP_BOOT_NATIVE_IMAGE_BUILD_ARGUMENTS": "-Dspring.spel.ignore=true"
    ]
}
